--- a/imageFlow/Base.lproj/Main.storyboard
+++ b/imageFlow/Base.lproj/Main.storyboard
@@ -273,7 +273,7 @@
                                 <segue destination="JIj-hj-oqf" kind="show" id="0Ol-1U-qRN"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="fHL-lD-A60">
+                        <barButtonItem key="rightBarButtonItem" id="fHL-lD-A60">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="R3h-CT-kew">
                                 <rect key="frame" x="548" y="6" width="32" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -304,8 +304,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="welcome_bg" translatesAutoresizingMaskIntoConstraints="NO" id="ku1-kC-v5v">
-                                <rect key="frame" x="0.0" y="72" width="600" height="478"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome_bg" translatesAutoresizingMaskIntoConstraints="NO" id="ku1-kC-v5v">
+                                <rect key="frame" x="0.0" y="116" width="600" height="434"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="437" id="uHb-cC-qcf"/>
                                 </constraints>
@@ -335,7 +335,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="gRC-B7-Uo0"/>
                                     <barButtonItem style="plain" id="Beq-cC-XcO">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="6c1-9A-2rI">
-                                            <rect key="frame" x="552" y="11" width="28" height="29"/>
+                                            <rect key="frame" x="552" y="10.5" width="28" height="29"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" title="Button" image="garbage"/>
                                         </button>
